force-app/main/default/objects/SBQQ__ProcessInputValue__c/fields/SBQQ__ProcessInputID__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProcessInputID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the Process Input that the object belongs to.</description>
        <inlineHelpText>Choose the Process Input that the object belongs to.</inlineHelpText>
        <label>Process Input ID</label>
        <referenceTo>SBQQ__ProcessInput__c</referenceTo>
        <relationshipLabel>Process Input Values</relationshipLabel>
        <relationshipName>Process_Input_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>