force-app/main/default/objects/SBQQ__ProcessInputValue__c/fields/SBQQ__QuoteId__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Id of the Quote that this Process Input Value belongs to.</description>
        <inlineHelpText>The Id of the Quote that this Process Input Value belongs to.</inlineHelpText>
        <label>Quote ID</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipName>Process_Input_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </CustomField>