force-app/main/default/objects/SBQQ__ProcessInputValue__c/fields/SBQQ__UserID__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This Process Input value belongs to the user.</description>
        <inlineHelpText>This Process Input value belongs to the user.</inlineHelpText>
        <label>UserID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Process_Input_Values</relationshipName>
        <type>Lookup</type>
    </CustomField>