force-app/main/default/objects/SBQQ__ProcessInputValue__c/fields/SBQQ__Value__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Value__c</fullName>
        <description>This is the answer to the input process value.</description>
        <inlineHelpText>This is the answer to the input process value.</inlineHelpText>
        <label>Value</label>
        <type>TextArea</type>
    </CustomField>